--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -9,7 +9,7 @@
 
 
     <LinearLayout
-        android:layout_width="390dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginBottom="107dp"
         android:background="@color/colorPrimary"
@@ -25,7 +25,7 @@
 
     <LinearLayout
         android:id="@+id/linearLayout4"
-        android:layout_width="390dp"
+        android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginTop="117dp"
         android:background="@color/colorPrimary"
@@ -42,13 +42,15 @@
 
     <TextView
         android:id="@+id/mainPageTextView1"
-        android:layout_width="142dp"
-        android:layout_height="37dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="450dp"
         android:layout_marginTop="50dp"
-        android:text="Authenticator"
+        android:text="@string/authenticator"
+        android:textAlignment="center"
         android:textAppearance="@android:style/TextAppearance.Large"
         android:textColor="@color/colorPrimary"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -61,7 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="31dp"
         android:onClick="switchMode"
-        android:text="Enter Code Manually"
+        android:text="@string/enter_code_manually"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
         app:layout_constraintEnd_toEndOf="parent"
@@ -81,8 +83,6 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mainPageTextView1" />
-
-
 
 
 </android.support.constraint.ConstraintLayout>
